--- a/src/view/homePage.fxml
+++ b/src/view/homePage.fxml
@@ -32,7 +32,7 @@
                </image>
             </ImageView>
             <Button mnemonicParsing="false" onAction="#goToUserInfoStage" text="Start test mode" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" text="Start game mode" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <Button mnemonicParsing="false" onAction="#goToChooseModeStage" text="Start game mode" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="15.0" />
                </GridPane.margin>
