--- a/src/view/report.fxml
+++ b/src/view/report.fxml
@@ -6,21 +6,28 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ReportController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="344.0" minHeight="10.0" prefHeight="343.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="344.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="344.0" minHeight="10.0" prefHeight="277.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="194.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Report" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+      <Label fx:id="lblReportText" text="{report}" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
          <padding>
             <Insets top="10.0" />
          </padding>
       </Label>
-      <Button mnemonicParsing="false" onAction="#goToHomePage" text="Finish" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onAction="#goToHomePage" text="Finish" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+      <Label text="Report" GridPane.halignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
    </children>
 </GridPane>
