--- a/src/view/gameMode1.fxml
+++ b/src/view/gameMode1.fxml
@@ -26,7 +26,7 @@
             <Insets top="20.0" />
          </GridPane.margin>
       </Label>
-      <GridPane GridPane.rowIndex="1">
+      <GridPane fx:id="gpGameMode1" GridPane.rowIndex="1">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
