--- a/src/view/test1.fxml
+++ b/src/view/test1.fxml
@@ -10,17 +10,25 @@
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="127.0" minHeight="0.0" prefHeight="44.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="278.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="284.0" minHeight="0.0" prefHeight="284.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane fx:id="gpTest" prefHeight="250.0" prefWidth="600.0" GridPane.rowIndex="1">
+      <Button mnemonicParsing="false" onAction="#goToReportStage" text="Finish" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <GridPane GridPane.rowIndex="1">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
       </GridPane>
-      <Button mnemonicParsing="false" onAction="#goToReportStage" text="Finish" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
    </children>
 </GridPane>
