--- a/src/view/userInfo.fxml
+++ b/src/view/userInfo.fxml
@@ -29,12 +29,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField fx:id="tfName" GridPane.columnIndex="1">
+            <TextField fx:id="tfName" text="Nasis" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </TextField>
-            <TextField fx:id="tfSurname" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <TextField fx:id="tfSurname" text="Silvestris" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
@@ -54,7 +54,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="tfAge" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <TextField fx:id="tfAge" text="20" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
