--- a/src/view/test.fxml
+++ b/src/view/test.fxml
@@ -44,7 +44,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" onAction="#goToReportStage" text="Finish" GridPane.columnIndex="1">
+                  <Button mnemonicParsing="false" onAction="#goToReportStage" text="Leave" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="8.0" />
                      </GridPane.margin>
